Fixed passkey create
